--- a/littleMan/style.css
+++ b/littleMan/style.css
@@ -117,6 +117,7 @@ body{
 	position: relative;
 	z-index: 3;
 }
+/*眼镜框*/
 .eyes .leftEye, .eyes .rightEye{
 	position: absolute;
 	width: 85px;
@@ -130,6 +131,7 @@ body{
 .eyes .leftEye{
 	left: 124px;
 }
+/*黑眼珠*/
 .eyes .leftEye .left_blackEye,
 .eyes .rightEye .right_blackEye{
 	position: absolute;
@@ -139,7 +141,20 @@ body{
 	background: #000;
 	top: 24px;
 	left: 22px;
+	-webkit-animation: blackeye 5s ease-in infinite;
 }
+@-webkit-keyframes blackeye{
+	0%,20%,50%,70%,100%{
+		-webkit-transform: translateX(0px);
+	}
+	30%,40%{
+		-webkit-transform: translateX(15px);
+	}
+	80%,90%{
+		-webkit-transform: translateX(-15px);
+	}
+}
+/*白色瞳孔*/
 .eyes .leftEye .left_blackEye .left_white,
 .eyes .rightEye .right_blackEye .right_white{
 	position: absolute;
@@ -149,6 +164,18 @@ body{
 	background: #fff;
 	top: 7px;
 	left: 17px;
+	-webkit-animation: whiteeye 5s ease-in-out infinite;
+}
+@-webkit-keyframes whiteeye{
+	0%,20%,50%,70%,100%{
+		-webkit-transform: translateX(0px);
+	}
+	30%,40%{
+		-webkit-transform: translate3d(3px,4px,0);
+	}
+	80%,90%{
+		-webkit-transform: translate3d(-15px,4px,0);
+	}
 }
 .eyes .leftEye:after,
 .eyes .rightEye:after{
@@ -166,6 +193,7 @@ body{
 	top: 37px;
 	-webkit-transform: skewX(-20deg) rotate(-7deg);
 }
+/*嘴*/
 .mouse{
 	position: relative;
 }
@@ -180,6 +208,20 @@ body{
 	left: 98px;
 	z-index: 3;
 	-webkit-transform:rotate(-35deg);
+	-webkit-animation: mouse 5s ease-in-out infinite;
+}
+@-webkit-keyframes mouse{
+	40%,43%{
+		width: 45px;
+		height: 25px;
+		top:180px;
+	}
+	0%,35%,48%,100%{
+		width: 55px;
+		height: 35px;
+		top:175px;
+		-webkit-transform:rotate(-35deg);
+	}
 }
 .mouse .mouse_shape:after{
 	position: absolute;
@@ -193,7 +235,22 @@ body{
 	top: -16px;
 	left: 3px;
 	-webkit-transform:rotate(34deg);
+	-webkit-animation: mouse_mask 5s ease-in-out infinite;
 }
+@-webkit-keyframes mouse_mask{
+	40%,43%{
+		width: 60.5px;
+		top:-19.3px;
+		left:1.5px;
+	}
+	0%,35%,48%,100%{
+		width: 70px;
+		top:-16px;
+		left:3px;
+		-webkit-transform:rotate(33deg);
+	}
+}
+/*手的样式*/
 .hands{
 	position: relative;
 }
@@ -208,12 +265,30 @@ body{
 	top: 220px;
 	left: -23px;
 	-webkit-transform:rotate(40deg);
+	-webkit-animation:rightHand .8s ease-in-out infinite;
+}
+@-webkit-keyframes rightHand{
+	0%,50%,100%{
+		-webkit-transform: rotate(40deg);
+	}
+	30%{
+		-webkit-transform: rotate(37deg) translateX(1px);
+	}
 }
 .hands .leftHand{
 	left: 182px;
 	top: 220px;
 	-webkit-transform:rotate(-40deg);
+	-webkit-animation:leftHand .8s ease-in-out infinite;
 
+}
+@-webkit-keyframes leftHand{
+	0%,50%,100%{
+		-webkit-transform: rotate(-40deg);
+	}
+	80%{
+		-webkit-transform: rotate(-37deg) translateX(-1px);
+	}
 }
 .hands .leftHand:after,
 .hands .rightHand:after{
@@ -246,12 +321,30 @@ body{
 	top: 406px;
 	left: 88px;
 	-webkit-transform-origin: right top;
+	-webkit-animation: rightfoot .8s ease-in-out infinite;
+}
+@-webkit-keyframes rightfoot{
+	0%,50%,100%{
+		-webkit-transform: rotate(0deg);
+	}
+	80%{
+		-webkit-transform: rotate(10deg);
+	}
 }
 .feet .left_foot{
 	border-bottom-right-radius: 9px;
 	border-bottom-left-radius: 6px;
 	left: 130px;
 	-webkit-transform-origin: left top;
+	-webkit-animation: leftfoot .8s ease-in-out infinite;
+}
+@-webkit-keyframes leftfoot{
+	0%,50%,100%{
+		-webkit-transform: rotate(0deg);
+	}
+	30%{
+		-webkit-transform: rotate(-10deg);
+	}
 }
 .feet .left_foot:after,
 .feet .right_foot:after{
@@ -270,7 +363,51 @@ body{
 	left: 13px;
 	-webkit-transform:rotate(-5deg);
 }
-
+.hair{
+	position: relative;
+}
+/*头发效果*/
+.left_hair_one{
+	position: absolute;
+	width: 130px;
+	height: 100px;
+	border-radius: 50%;
+	/*border: 1px solid red;*/
+	border-top:8px solid #000;
+	left:17px;
+	top:-17px;
+	-webkit-transform:rotate(27deg);
+	-webkit-animation: lefthair 2s ease-in-out infinite;
+}
+@-webkit-keyframes lefthair{
+	0%,25%,31%,100%{
+	}
+	30%{
+		-webkit-transform: rotate(31deg) translate3d(-3px,-1px,0);
+	}
+}
+.left_hair_two{
+	position: absolute;
+	width: 80px;
+	height: 80px;
+	border-radius: 50%;
+	/*border: 1px solid red;*/
+	border-top:6px solid #000;
+	left:45px;
+	top:-10px;
+	-webkit-transform:rotate(15deg);
+}
+/*脚下阴影*/
+.groundShadow{
+	position: relative;
+	width: 200px;
+	height: 2px;
+	border-radius: 50%;
+	background: rgba(0,0,0,0.3);
+	box-shadow: 0 0 2px 4px rgba(0,0,0,0.3);
+	top: 468px;
+	left:25px;
+}
 
 
 
